OW/force-app/main/default/objects/Lead/fields/OW_Industry_Other__c.field-meta.xml
<CustomField>
    <fullName>OW_Industry_Other__c</fullName>
    <label>Industry Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>