OW/force-app/main/default/objects/Lead/fields/OW_Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>OW_Lead_Priority__c</fullName>
    <label>Lead Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1 Priority response</fullName>
            </value>
            <value>
                <fullName>Level 2 Low-priority response</fullName>
            </value>
            <value>
                <fullName>Level 3 Response not required</fullName>
            </value>
            <value>
                <fullName>Level 4 Spam / Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>