OW/force-app/main/default/objects/Lead/fields/OW_NDA__c.field-meta.xml
<CustomField>
    <fullName>OW_NDA__c</fullName>
    <label>NDA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_NDA</valueSetName>
    </valueSet>
</CustomField>